# fastapi-boilerplate

./: .env.template  .gitignore  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 8d3533fc0021_add_user_table.py
app/: config.py  dependencies.py  main.py  models.py
app/api/: user.py
app/databases/: rdb.py
app/models/: base.py  user.py
app/repositories/: user.py
app/schemas/: base.py  user.py
app/services/: auth.py  user.py
app/utils/: api_utils.py  repo_utils.py
config/: .env.template  env_loader.py
env/: .env.template
scripts/: manage_migration.sh  run_docker_compose.sh  run_local_server.sh  run_server.sh
